--- a/uvalib-hours-ui.css
+++ b/uvalib-hours-ui.css
@@ -10,7 +10,9 @@ polyfill-next-selector { content: ':host > h2'; }
 }
 
     core-animated-pages {
-      /*position: absolute;
+
+      /*
+      position: absolute;
       top: 50px;
       right: 0;
       bottom: 0;
@@ -25,3 +27,16 @@ polyfill-next-selector { content: ':host > h2'; }
       height: 100%;
       color: white;
     }
+    .card span {
+    	font-size: 8px;
+    }
+    .card {
+position: relative;
+height: 150px;
+width: 150px;
+font-size: 50px;
+margin: 8px;
+background-color: tomato;
+border-radius: 4px;
+cursor: default;
+}
