--- a/uvalib-hours-ui.css
+++ b/uvalib-hours-ui.css
@@ -9,34 +9,16 @@ polyfill-next-selector { content: ':host > h2'; }
   color: blue;
 }
 
-    core-animated-pages {
 
-      /*
-      position: absolute;
-      top: 50px;
-      right: 0;
-      bottom: 0;
-      height: 100px;
-      left: 0;
-      font-size: 72px;
-      overflow: hidden;
-      */
-    }
-
-    section > div {
-      height: 100%;
-      color: white;
-    }
-    .card span {
-    	font-size: 8px;
-    }
-    .card {
-position: relative;
-height: 150px;
-width: 150px;
-font-size: 50px;
-margin: 8px;
-background-color: tomato;
-border-radius: 4px;
-cursor: default;
+.card {
+  background-color: #fff;
+  border: 1px solid #AAA;
+  border-radius: 4px;
+  box-shadow: 0 0 3px rgba(160, 160, 160, 0.4), inset 0 0 5px rgba(200, 200, 200, 0.6), inset 0 0 0 1px rgba(255, 255 ,255, 0.9);
+  float: left;
+  margin: 0 1% 0 0;
+  overflow: hidden;
+  text-align: center;
+  width: 18%;
+  height: 150px;
 }
