--- a/uvalib-hours-ui.css
+++ b/uvalib-hours-ui.css
@@ -9,7 +9,6 @@ polyfill-next-selector { content: ':host > h2'; }
   color: blue;
 }
 
-
 .card {
   background-color: #fff;
   border: 1px solid #AAA;
@@ -21,4 +20,24 @@ polyfill-next-selector { content: ':host > h2'; }
   text-align: center;
   width: 18%;
   height: 150px;
+}
+
+.hours-date {
+  background: #EEF1F7;
+  border-bottom: 1px solid #BBB;
+  box-shadow: inset 0 0 5px rgba(220, 220, 220, 0.9), inset 0 0 0 1px rgba(255, 255 ,255, 0.9);
+  color: #333;
+  font-family: "ff-dagny-web-pro", "Helvetica Neue", Arial, sans-serif;
+  font-size: 14px;
+  font-size: 1.4rem;
+  padding: 4% 2%;
+}
+
+.hours {
+  color: #444;
+  font-size: 15px;
+  font-variant: small-caps;
+  line-height: 1.4em;
+  min-height: 42px;
+  padding: 4%;
 }
